--- a/package.json
+++ b/package.json
@@ -9,16 +9,20 @@
     "test": "echo \"No test specified\" && exit 0"
   },
   "dependencies": {
-    "axios": "^0.21.1",
-    "vuex": "^4.0.1",
     "@quasar/extras": "^1.0.0",
+    "apexcharts": "^3.35.5",
+    "axios": "^0.21.1",
+    "echarts": "^5.4.0",
     "quasar": "^2.6.0",
     "vue": "^3.0.0",
-    "vue-router": "^4.0.0"
+    "vue-echarts": "^6.2.3",
+    "vue-router": "^4.0.0",
+    "vue3-apexcharts": "^1.4.1",
+    "vuex": "^4.0.1"
   },
   "devDependencies": {
-    "@types/node": "^12.20.21",
     "@quasar/app-vite": "^1.0.0",
+    "@types/node": "^12.20.21",
     "autoprefixer": "^10.4.2",
     "typescript": "^4.5.4"
   },
